# calendar

calendar-secretary/: .env  .gitignore  README.md  docker-compose.yml
calendar-secretary/backend/: .dockerignore  Dockerfile  pyproject.toml
calendar-secretary/backend/alembic/: README
calendar-secretary/backend/app/: main.py
calendar-secretary/backend/app/api/: events.py  families.py  plan.py  pomodoro.py  sync.py
calendar-secretary/backend/app/core/: config.py  db.py
calendar-secretary/backend/app/models/: event.py  user.py
calendar-secretary/backend/app/schemas/: event.py  plan.py
calendar-secretary/backend/app/services/planner/: cp_sat_solver.py  heuristic_solver.py  rules.py
calendar-secretary/backend/app/services/sync/: caldav_client.py  ics_service.py
calendar-secretary/backend/app/tests/: test_cp_sat_solver.py  test_dependencies_fs.py  test_events_api.py  test_family_targets.py  test_planner_basic.py  test_pomodoro_splitting.py  test_replan_early_finish.py
calendar-secretary/frontend/: .dockerignore  Dockerfile  index.html  package.json  tailwind.config.js  vite.config.ts
calendar-secretary/frontend/src/: App.tsx  api.ts  main.tsx
calendar-secretary/frontend/src/components/: EventForm.tsx  PlannerPanel.tsx
calendar-secretary/frontend/src/pages/: Calendar.tsx  Settings.tsx  Tasks.tsx
